--- a/style.css
+++ b/style.css
@@ -10,14 +10,23 @@ body{
     background-color: #1F2937;
     color: #F9FAF8;
     font-size: 24px;
+    justify-content: space-around;
+}
+
+.heading{
+    display: flex;
+    width: 300px;
     padding: 0 16px;
 }
 
 .top-links {
     display: flex;
-    margin-left: auto;
+    /*margin-left: auto;*/
     list-style: none;
     gap: 16px;
+    width: 300px;
+    justify-content: right;
+    padding: 0 16px;
 }
 
 a {
