--- a/style.css
+++ b/style.css
@@ -1,22 +1,26 @@
 body{
     display: flex;
     flex-direction: column;
+    font-family: Arial, sans-serif;
 }
 
 .header {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     background-color: #1F2937;
     color: #F9FAF8;
     font-size: 24px;
-    justify-content: space-around;
+    justify-content: center;
+    padding: 0 64px;
 }
 
 .heading{
     display: flex;
-    width: 300px;
-    padding: 0 16px;
+    width: 450px;
+    justify-content: left;
+    font-weight: 900;
+    margin-bottom: 64px;
 }
 
 .top-links {
@@ -24,9 +28,10 @@ body{
     /*margin-left: auto;*/
     list-style: none;
     gap: 16px;
-    width: 300px;
-    justify-content: right;
-    padding: 0 16px;
+    width: 450px;
+    justify-content: flex-start;
+    margin-top: 0;
+    margin-bottom: 64px;
 }
 
 a {
@@ -35,24 +40,32 @@ a {
     text-decoration: none;
 }
 
+img {
+    margin-top: 48px;
+    max-height: 100%;
+    width: auto;
+}
 .hero {
     display:flex;
-    justify-content: space-around;
+    justify-content: center;
     background-color: #1F2937;
     color: #F9FAF8;
     font-size: 18px;
 }
 
-.hero.h1 {
-    font-size: 48px;;
+.top {
+    font-size: 48px;
+    font-weight: 900;
+    margin-bottom: 0;
 }
 
 .h-left, .h-right {
     flex-direction: column;
     display: flex;
-    max-width: 300px;
-    justify-content: center;
+    max-width: 450px;
+    justify-content: flex-start;
     margin: 32px;
+    margin-bottom: 64px;
 }
 
 button {
@@ -61,9 +74,10 @@ button {
     color:white;
     border-radius: 5px;
     border: 1px;
-    width: 80px;
-    padding: 2px 15px;
+    width: 90px;
+    padding: 6px 15px 5px;
     align-items: center;
     justify-content: center;
     font-weight: 600;
+    font-family: Tahoma, sans-serif;
 }
