--- a/style.css
+++ b/style.css
@@ -89,20 +89,25 @@ button {
     display:flex;
     align-items:stretch;
     justify-content: center;
-    gap: 32px;
     flex-wrap: wrap;
     margin-bottom: 96px;
+    color: #1F2937;
   }
 
 .instance {
-    max-width: 200px;
+    width: 200px;
     text-align: center;
+    margin:8px;
   }
 
 .inin {
     width: 150px;
     height: 150px;
     border-radius: 10px;
+    border: 3px solid #3882f6;
+    margin-bottom: 6px;
+    /* crops the image*/
+    object-fit: cover;
 }
 
 .infotitle {
@@ -113,4 +118,26 @@ button {
     color: #1F2937;
     justify-content: center;
     margin:32px;
+}
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    background-color: #e5e7eb;
+    color: #1F2937;
+    padding: 64px 96px;
+}
+
+.quotation {
+    font-style: italic;
+    font-size: 36px;
+    font-weight:100;
+}
+
+.author{
+    font-weight: 900;
+    font-size: 24px;
+    margin-left: auto;
+    margin-top: 6px;
+    
 }
